first 2 reports done

--- a/raterprojectreports/templates/ratings/list_with_lowest_ratings.html
+++ b/raterprojectreports/templates/ratings/list_with_lowest_ratings.html
@@ -6,9 +6,9 @@
     <title>Gamer Rater Reports</title>
   </head>
   <body>
-    <h1>Top 5 Games By Rating</h1>
+    <h1>The 5 Lowest-Rated Games</h1>
 
-    {% for game in topgamerating_list %}
+    {% for game in bottomgamerating_list %}
 
             <ul>
                 Title: {{ game.title }} <br>
